--- a/graylog_in_docker/roles/graylog_in_docker/tasks/main.yml
+++ b/graylog_in_docker/roles/graylog_in_docker/tasks/main.yml
@@ -22,24 +22,24 @@
   when: inventory_hostname in groups['graylog_node']
 
 
-- name: Формируем JSON для инициализации Replica Set
+- name: Формируем JSON для инициализации Replica Set /tmp/rs_config.js
   delegate_to: localhost
   run_once: true
   template:
     src: rs_config.js.j2
     dest: /tmp/rs_config.js
 
-- name: Показываем содержимое сгенерированного файла
-  delegate_to: localhost
-  run_once: true
-  command: cat /tmp/rs_config.js
-  register: rs_file
-
-- name: Выводим его
-  delegate_to: localhost
-  run_once: true
-  debug:
-    var: rs_file.stdout_lines
+#- name: Показываем содержимое сгенерированного файла
+#  delegate_to: localhost
+#  run_once: true
+#  command: cat /tmp/rs_config.js
+#  register: rs_file
+#
+#- name: Выводим его
+#  delegate_to: localhost
+#  run_once: true
+#  debug:
+#    var: rs_file.stdout_lines
 
 
 #- name: Инициализируем Replica Set
